added conclusions section

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -72,8 +72,8 @@
 
 %=================================================================
 % Full title of the paper (Capitalized)
-\Title{Generative Simplex Mapping: Nonlinear Endmember Extraction for Source Apportionment and Spectral Unmixing for Hyperspectral Imagery}
-% \Title{Generative Simplex Mapping: Nonlinear Endmember Extraction and Spectral Unmixing for Hyperspectral Imagery}
+% \Title{Generative Simplex Mapping: Nonlinear Endmember Extraction for Source Apportionment and Spectral Unmixing for Hyperspectral Imagery}
+\Title{Generative Simplex Mapping: Nonlinear Endmember Extraction and Spectral Unmixing for Hyperspectral Imagery}
 
 % MDPI internal command: Title for citation in the left column
 \TitleCitation{Generative Simplex Mapping: Nonlinear Endmember Extraction and Spectral Unmixing for Hyperspectral Imagery}
@@ -127,7 +127,7 @@ Many approaches have been developed to make sense of HSI data. For example, spec
 
 The spatial resolution of hyperspectral imagers generally results in  pixels with mixed signals from multiple sources called endmembers. The task of unsupervised source identification using HSI data therefore involves two steps: endmember extraction, and abundance estimation. Techniques such as vertex component analysis (VCA), the pixel purity index (PPI), and N-FINDR solve this first task by identifying endmember spectra from HSI assuming the presence of some pure (unmixed) pixels \cite{vca-orig, ppi-orig, N-FINDR-orig}. By further assuming a linear mixing model (LMM) whereby observed spectra are described by a linear combination of endmembers with non-negative abundances, HSI can then be unmixed using a variety of techniques such as constrained least-squares \cite{spectral-unmixing-orig, fcls-unmixing}. Among these methods Non-negative Matrix Factorization (NMF) is a widely used approach which extracts endmember spectra and unmixes abundances simultaneously via matrix factorization \cite{nmf-orig, unmixing-nmf-review, unmixing-nmf-review-2}. The update equations for NMF can be formulated into multiplicative updates which guarantee the non-negativity of endmember spectra and their associated abundances \cite{nmf-algorithms}.  For this reason the continued development of new NMF varieties remains an active area of research.
 
-In realistic scenes multiple scattering and surface variability can easily challenge the assumption of linear mixing \cite{heylen2014review}. Water-based HSI specifically are prone to nonlinear mixing effects due to absorption features of dissolved and suspended substances, fluorescence of organic matter, and particulate scattering in turbid waters \cite{hsi-absorption, hsi-fluorescence, hsi-turibidity}. With the growing popularity of deep learning approaches in remote sensing, a variety of models based on autoencoder architectures have been introduced which enable nonlinear unmixing of HSI data \cite{non-negative-autoencoders,su2019daen,palsson2020convolutional,}. However, the complexity introduced by these models significantly impacts training time and decreases model interpretability. An ideal approach should enable both endmember extraction and nonlinear unmixing while accounting for spectral variability. 
+In realistic scenes multiple scattering and surface variability can easily challenge the assumption of linear mixing \cite{heylen2014review}. Water-based HSI specifically are prone to nonlinear mixing effects due to absorption features of dissolved and suspended substances, fluorescence of organic matter, and particulate scattering in turbid waters \cite{hsi-absorption, hsi-fluorescence, hsi-turibidity}. With the growing popularity of deep learning approaches in remote sensing, a variety of models based on autoencoder architectures have been introduced for unmixing HSI data \cite{non-negative-autoencoders,su2019daen,borsoi2019deep,palsson2020convolutional}. However, the complexity introduced by these models significantly impacts training time and decreases model interpretability. An ideal approach should enable both endmember extraction and nonlinear unmixing while accounting for spectral variability. 
 
 The self-organizing map (SOM) is an unsupervised machine learning method which maps high-dimensional data onto a low-dimensional grid while preserving the topological relationships between data points \cite{kohonen-som-1}. This low dimensional representation provides a convenient way to visualize HSI data while the weight vectors for each SOM node can be interpreted as representative spectra \cite{cantero2004analysis, duran2007time,som-hsi}. If labelled reference spectra are available, the SOM can be used to enable semi-supervised labelling of HSI pixels \cite{riese2019supervised}. The SOM has also been shown to be effective for compression of HSIs acquired by a CubeSat \cite{som-satellite}. Despite these capabilities, the SOM does not offer a probabilistic interpretation and relies on a heuristic training procedure with hyperparameters that can be challenging to tune. To address these shortcomings, Bishop et al introduced the Generative Topographic Mapping (GTM), a probabilistic latent-variable model inspired by the SOM \cite{gtm-orig}. When the latent space is chosen to be two dimensional, the GTM can be used to visualize the distribution of HSI spectra while the mapping of latent space nodes into the HSI data space provides endmembers\cite{robot-team-gtm}. Unfortunately, the rectangular latent space grid employed by the GTM does not directly translate into endmember abundances. Additionally, the expectation-maximization (EM) algorithm used to train the GTM does not guarantee non-negativity of GTM node spectra. 
 
@@ -395,37 +395,20 @@ Applying the trained GSM to unmix HSI from UAV flights provides an efficient way
 
 \section{Discussion}\label{sec:disucssion}
 
-- Comparison to NMF on linear mixing problem
-    - note that there are many versions of NMF with different constraints/regularization. The purpose here was to show that GSM is at least \textit{comparable} to NMF for linear unmixing problems
-    - Further note that both NMF and GSM do not rely on assumption of pure pixels (unlike VCA and other methods) 
-    - GSM also allows estimation of endmember variability via the precision parameter $\beta$ i.e. nodes in data space follow Gaussian distribution with $\sigma = \sqrt{\beta^{-1}}$
+The proliferation of hyperspectral imaging technologies in the remote sensing and environmental monitoring communities underscores the need for efficient algorithms which can make sense of high-dimensional HSI. Of particular interest are unsupervised algorithms which utilize all available wavelength bins to identify unique source profiles present realistic scenes. The GSM introduced in this paper is a novel method which simultaneously performs endmember extraction and spectral unmixing. Unlike popular endmember extraction algorithms such as VCA, PPI, and N-FINDR, the GSM does not assume the presence of pure pixels in HSI. Furthermore, the flexible structure of the mapping from the GSM latent space to the spectral data space allows the GSM to model nonlinear mixing effects, distinguishing it from other widely used linear models such as NMF. Being a probabilistic model also enables the GSM to quantify spectral variability via the precision parameter $\beta$ as indicated in Figure~\ref{fig:usgs-endmembers}. This additional capability is critical for analysis of realistic HSI where sensor noise, viewing geometry, and scene illumination all introduce uncertainty into extracted endmembers.
 
-- Nonlinear GSM for robot team 
-    - discuss identification of rhodamine plume and easy abundance mapping via the embedding coordinate
-    - discuss intrinsic dimensionality identification via abundance sparsity and BIC
-    - Discuss identification of non-linearity \textit{strength} via regularization parameter and BIC.
-    - reconstruction rmse can also be used to evaluate the relative performance for fixed model size (i.e. k and m) with varying regularization strength
+The growing popularity of deep learning methods has led many to explore applications of deep learning to the spectral unmixing problem. Variations on autoencoder architectures are a popular choice for both endmember extraction and unmixing. For example, Borsoi et al. utilized a variational autoencoder to more accurately identify spectral variability in a LMM \cite{borsoi2019deep}. Similarly, Palson et al. introduced an autoencoder with convolution layers to extend the LMM by incorporating spatial context from neighboring HSI pixels \cite{palsson2020convolutional}. However, the increased complexity of deep neural network approaches makes interpreting the latent space learned by encoder layers challenging and can dramatically increase training time and data volume requirements. In contrast, the latent space of the GSM is immediately interpretable due to the imposed simplex geometry while the form of $\psi$ leaves room to explore a variety of nonlinear mixing models. In this paper, $\psi$ was constructed to add nonlinear effects as additions or perturbations to an underlying linear mixing model with the $\lambda_w$ hyperparameter provided to control the degree of nonlinearity considered. In the original GTM formulation which inspired the GSM, the mapping $\psi$ strictly uses nonlinear features generated by Gaussian RBFs. Alternatively, one could easily construct $\psi$ for specific nonlinear models such as bilinear mixing by introducing features which depend on higher order combinations of the latent space (abundance) coordinates $z_k$. It is important to note, though, that the EM algorithm formulated for GSM training is made possible due to the linear combination of activations $\phi(z)$ with model weights $\mathbf{W}$. For mixing models which instead depend nonlinearly on weights $\mathbf{W}$, an EM algorithm may require iterative nonlinear solves during each M step.
 
-- Limitations of the GSM
-    - slow training due to computation of dinstance matrix between full dataset and embedding space
-    - An incremental version of the EM procedure as described in \cite{gtm-developments} can speed this up by considering batches $X_b$ of $X$ and performing only a partial E-step by updating responsibilities corresponding to the data batch
-    - However, M step still involves the "full" responsibility matrix. 
-    - This can be addressed by taking an ensembling approach as described in \cite{parallel-gtm} where multiple GTM are trained on subsets of $X$ and the results are averaged. 
-    - More generally, we may consider a mixture-of-GTMs as briefly desribed in \cite{gtm-orig} whereby the overall density is given as 
-    \begin{equation}
-        p(\mathbf{x}) = \sum_r P(r)p(\mathbf{x}\vert r)
-    \end{equation}
-    where there are $r$ individual GTM models with mixing coefficients $P(r)$ such that $\sum_r P(r) =1$
+The main limitation of the GSM is curse of dimensionality encountered when generating a grid on the $(N_v-1)$-simplex for large numbers of endmembers, $N_v$. This can be mitigated by instead randomly sampling points within the interior of the simplex using a uniform Dirichlet distribution to obtain a pre-determined number of nodes across the latent space. As the mixing coefficients $\pi_k$ are adapted during training, variability in inter-node spacing should not significantly impact model performance. Indeed, this was confirmed for the simulated dataset as summarized in Figure~\ref{fig:usgs-fits}. For considerably large datasets, the size of the responsibility matrix $\mathbf{R}$ can lead to extended training times. This can be addressed by augmenting the EM procedure to updated using mini-batches training samples during each EM step as described by Bishop et al. for the GTM in ref. \cite{gtm-developments}. Rather than updating the full responsibility matrix during each E step, a subset of $\mathbf{R}$ corresponding to a single batch of training data can be evaluated with all other entries held constant. The GSM can be extended in other ways, for example, by replacing the precision parameter $\beta$ with a covariance matrix to model wavelength dependent spectral variability common to many hyperspectral imaging platforms. 
 
-- Other potential extensions to GSM model
-     - Adapt latent space  to allow for points whose barycentric coordinates sum to less than 1 in order to account for lighting effects (shouldn't matter for reflectance but would matter for radiance depending on incident light). This is the $\gamma$ factor that shows up in some of the mixing papers.
-    - Augment the data-space distribution to allow for more complicated noise models than a fixed $\beta$ parameter. A diagonal covariance matrix would allow the model to infer seperate uncertainty criterion for each wavelength bin which is relevant for real world HSI which may have different noise levels for different wavelength bins.
-    
-- Discuss other applications of the GSM
-    - Optimal route planning for in-situ data collection based on prize-collecting travelling salesman problem, i.e. construct a route which maximizies area traversed in GSM latent space (e.g. the n-simplex). 
-    - Applications to source apportionment, e.g. linear GSM can be used for standard source apportionment problems (no reactions) and nonlinear GSM may be useful for modeling scenarios with additional complications due to reactions and during transport from source to receptor.
+Based on the results from applying the GSM to real HSI as illustrated in Figure~\ref{fig:endmember-abundance-dist} and Figure~\ref{fig:plume-evo}, one clear application of the GSM is to contaminant identification and water quality assessment. Modern UAV platforms make it possible to rapidly image bodies of water with limited access for in situ data collection. By equipping UAVs with hyperspectral imagers, the GSM can be used to identify abnormal spectral signatures corresponding to localized contaminant sources. Generating semantic segmentations of collected HSI as in panel b of Figure~\ref{fig:robot-team-endmembers} makes it easy to compare multiple HSI without resorting to pseudocolor images generated from a limited number of wavelength bands. Since the GSM models the distribution of all HSI spectra rather than individual parameters, it may also aide in situ data collection where sampling points can be chosen to maximize the area traversed in the GSM latent space rather than uniformly sampling across a wide spatial extent. Similar approaches have been developed to guide autonomous data collection vehicles by casting route planning as a prize collecting travelling salesman problem \cite{balas2007prize, suryan2020learning}.
+
+As a final consideration, we note that the problem of endmember extraction and spectral unmixing for HSI is identical to source apportionment in the context of air quality. Here the goal is to identify measurement profiles associated with sources of ambient air pollution based on measurements at a receptor site. A popular model for source apportionment studies is Positive Matrix Factorization (PMF) introduced by Paatero and Tapper \cite{pmf-orig, ulbrich2009interpretation}. Just like NMF, PMF decomposes measurements into a linear combination of source profiles and relative abundances subject to non-negativity constraints. These linear receptor models assume that sources are not transformed during transport to the receptor, ignoring changes due to chemical reactions. Nonlinear mixing models like the GSM introduced here may therefore prove beneficial in this additional domain.
+
 
 \section{Conclusions}\label{sec:conclusions}
+
+In this paper, we introduce the GSM as a novel method for unsupervised endmember extraction and spectral unmixing. The model was compared to three varieties of NMF on a synthetic dataset of linearly mixed spectra from the USGS spectral database. Across all noise levels, the GSM outperformed NMF for both endmember accuracy and abundance estimation. When applied to real HSI collected over a north Texas pond, the GSM accurately models spectral mixing including nonlinear effects. Rhodamine dye was released into the pond the pond to simulate a localized contaminant source. Endmember abundances estimated by the GSM corresponding to the dye accurately tracked the evolution of the plume as it mixed into the surrounding water. These examples illustrate the power of combining nonlinear mixing models together with UAV-based hyperspectral imaging for environmental monitoring and water quality analysis. Future work will further develop the GSM to incorporate wavelength dependent spectral variability. Additionally the GSM may prove useful for air quality studies as a nonlinear source apportionment model.
 
 
 \section{Patents}
@@ -487,7 +470,8 @@ EM & Expectation-Maximization \\
 GSM & Generative Simplex Mapping \\ 
 RBF & Radial Basis Function \\
 RMSE & Root Mean Square Error \\ 
-PCA & Principal Component Analysis
+PCA & Principal Component Analysis \\ 
+PMF & Positive Matrix Factorization
 \end{tabular}
 }
 
