--- a/paper/references.bib
+++ b/paper/references.bib
@@ -232,7 +232,6 @@
 
 
 % NMF
-
 @article{pmf-orig,
   title={Positive matrix factorization: A non-negative factor model with optimal utilization of error estimates of data values},
   author={Paatero, Pentti and Tapper, Unto},
@@ -254,6 +253,20 @@
   year={1997},
   publisher={Elsevier}
 }
+
+
+@article{ulbrich2009interpretation,
+  title={Interpretation of organic components from Positive Matrix Factorization of aerosol mass spectrometric data},
+  author={Ulbrich, IM and Canagaratna, MR and Zhang, Qi and Worsnop, DR and Jimenez, JL},
+  journal={Atmospheric Chemistry and Physics},
+  volume={9},
+  number={9},
+  pages={2891--2918},
+  year={2009},
+  publisher={Copernicus GmbH}
+}
+
+
 
 @article{nmf-orig,
   title={Learning the parts of objects by non-negative matrix factorization},
