Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -107,7 +107,7 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
 %\conference{} % An extended version of a conference paper
 
 % Abstract (Do not insert blank lines, i.e. \\) 
-\abstract{\textcolor{violet}{In this paper, we introduce a new model for non-linear endmember extraction and spectral unmixing of hyperspectral imagery called Generative Simplex Mapping (GSM). The model represents endmember mixing using a latent space with points sampled within a $(n-1)$-simplex corresponding to the abundance of $n$ unique sources. Points in this latent space are non-linearly mapped to reflectance spectra via a flexible function combining linear and non-linear mixing. Due to the probabilistic formulation of the GSM, spectral variability is also estimated by a precision parameter describing the distribution of observed spectra. Model parameters are determined using a generalized expectation-maximization algorithm. In the event of purely linear mixing, non-linear contributions are naturally driven to zero. The GSM outperforms three varieties of non-negative matrix factorization for both endmember extraction accuracy and abundance estimation on a synthetic data set of linearly mixed spectra from the USGS spectral library. In a second experiment, the GSM is applied to real hyperspectral imagery captured over a pond in North Texas. The model is able to accurately identify spectral signatures corresponding to near-shore algae, water, and rhodmaine tracer dye introduced into the pond to simulate water contamination by a localized source. Abundance maps generated using the GSM accurately track evolution of the dye plume as it mixes into the surrounding water.}}
+\abstract{In this paper, we introduce a new model for non-linear endmember extraction and spectral unmixing of hyperspectral imagery called Generative Simplex Mapping (GSM). The model represents endmember mixing using a latent space with points sampled within a $(n-1)$-simplex corresponding to the abundance of $n$ unique sources. Points in this latent space are non-linearly mapped to reflectance spectra via a flexible function combining linear and non-linear mixing. Due to the probabilistic formulation of the GSM, spectral variability is also estimated by a precision parameter describing the distribution of observed spectra. Model parameters are determined using a generalized expectation-maximization algorithm. In the event of purely linear mixing, non-linear contributions are naturally driven to zero. The GSM outperforms three varieties of non-negative matrix factorization for both endmember extraction accuracy and abundance estimation on a synthetic data set of linearly mixed spectra from the USGS spectral library. In a second experiment, the GSM is applied to real hyperspectral imagery captured over a pond in North Texas. The model is able to accurately identify spectral signatures corresponding to near-shore algae, water, and rhodmaine tracer dye introduced into the pond to simulate water contamination by a localized source. Abundance maps generated using the GSM accurately track evolution of the dye plume as it mixes into the surrounding water.}
 
 % Keywords
 \keyword{Endmember Extraction; Spectral Unmixing; Hyperspectral Imaging; Unsupervised Machine Learning; Source Apportionment} 
@@ -408,7 +408,7 @@ As a final consideration, we note that the problem of endmember extraction and s
 
 \section{Conclusions}\label{sec:conclusions}
 
-\textcolor{purple}{In this paper, we introduced the GSM as a novel method for unsupervised endmember extraction and spectral unmixing. The model was compared to three varieties of NMF on a synthetic data set of linearly mixed spectra from the USGS spectral database. Across all noise levels, the GSM outperformed NMF for both endmember accuracy and abundance estimation. When applied to real HSI collected over a north Texas pond, the GSM accurately models spectral mixing including non-linear effects. Rhodamine dye was released into the pond to simulate a localized contaminant source. Endmember abundances estimated by the GSM corresponding to the dye accurately tracked the evolution of the plume as it mixed into the surrounding water. These examples illustrate the power of combining non-linear mixing models together with UAV-based hyperspectral imaging for environmental monitoring and water quality analysis. Future work will further develop the GSM to incorporate wavelength dependent spectral variability. Additionally the GSM may prove useful for air quality studies as a non-linear source apportionment model.}
+In this paper, we introduced the GSM as a novel method for unsupervised endmember extraction and spectral unmixing. The model was compared to three varieties of NMF on a synthetic data set of linearly mixed spectra from the USGS spectral database. Across all noise levels, the GSM outperformed NMF for both endmember accuracy and abundance estimation. When applied to real HSI collected over a north Texas pond, the GSM accurately models spectral mixing including non-linear effects. Rhodamine dye was released into the pond to simulate a localized contaminant source. Endmember abundances estimated by the GSM corresponding to the dye accurately tracked the evolution of the plume as it mixed into the surrounding water. These examples illustrate the power of combining non-linear mixing models together with UAV-based hyperspectral imaging for environmental monitoring and water quality analysis. Future work will further develop the GSM to incorporate wavelength dependent spectral variability. Additionally the GSM may prove useful for air quality studies as a non-linear source apportionment model.
 
 
 \section{Patents}
@@ -424,18 +424,16 @@ As a final consideration, we note that the problem of endmember extraction and s
 }
 
 
-\funding{\textcolor{red}{This research was funded by the following grants: the Texas National Security Network Excellence Fund award for Environmental Sensing Security Sentinels; the SOFWERX award for Machine Learning for Robotic Teams and NSF Award OAC-2115094; support from the University of Texas at Dallas Office of Sponsored Programs, Dean of Natural Sciences and Mathematics, and Chair of the Physics Department is gratefully acknowledged; TRECIS CC* Cyberteam (NSF \#2019135); NSF OAC-2115094 Award; and EPA P3 grant number 84057001-0.}}
+\funding{This research was funded by the following grants: the Texas National Security Network Excellence Fund award for Environmental Sensing Security Sentinels; the SOFWERX award for Machine Learning for Robotic Teams and NSF Award OAC-2115094; support from the University of Texas at Dallas Office of Sponsored Programs, Dean of Natural Sciences and Mathematics, and Chair of the Physics Department is gratefully acknowledged; TRECIS CC* Cyberteam (NSF \#2019135); NSF OAC-2115094 Award; and EPA P3 grant number 84057001-0.}
 
 
 \institutionalreview{Not applicable.}
-
 \informedconsent{Not applicable.}
 
 
-\dataavailability{\textcolor{red}{We encourage all authors of articles published in MDPI journals to share their research data. In this section, please provide details regarding where data supporting reported results can be found, including links to publicly archived data sets analyzed or generated during the study. Where no new data were created, or where data is unavailable due to privacy or ethical restrictions, a statement is still required. Suggested Data Availability Statements are available in section ``MDPI Research Data Policies'' at \url{https://www.mdpi.com/ethics}.}}
+\dataavailability{The hyperspectral images supporting the conclusions of this article will be made available by the authors on request. An implementation of the GSM model in the Julia programming language is available at \url{https://github.com/john-waczak/GenerativeTopographicMapping.jl}, accessed on 21 August 2024.}
 
-
-\acknowledgments{\textcolor{red}{David Shaefer is gratefully acknowledged for his help coordinating UAV flights during HSI collection. We thank Adam Aker, Lakitha Wijeratne, Shawhin Talebi, Ashen Fernando, Prabuddha Dewage, Mazhar Iqbal, Matthew Lary, and Gokul Balagopal for their help deploying the UAV. Don MacLaughlin, Scotty MacLaughlin, and the city of Plano, TX, are gratefully acknowledged for allowing us to deploy the autonomous robot team on their property.  Christopher Simmons is gratefully acknowledged for his computational support. We thank  Antonio Mannino for his advice with regard to selecting the robotic boat's sensing suite. Annette Rogers is gratefully acknowledged for supporting the arrangement of insurance coverage. Steven Lyles is gratefully acknowledged for supporting the arrangement of a secure place for the robot team.}}
+\acknowledgments{David Shaefer is gratefully acknowledged for his help coordinating UAV flights during HSI collection. We thank Adam Aker, Lakitha Wijeratne, Shawhin Talebi, Ashen Fernando, Prabuddha Dewage, Mazhar Iqbal, Matthew Lary, and Gokul Balagopal for their help deploying the UAV. Don MacLaughlin, Scotty MacLaughlin, and the city of Plano, TX, are gratefully acknowledged for allowing us to deploy the UAV on their property.  Christopher Simmons is gratefully acknowledged for his computational support.}
 
 \conflictsofinterest{The authors declare no conflicts of interest.}
  
