updated citations to include doi's where possible for all sources

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -263,7 +263,7 @@ For comparison, NMF models were also trained on each data set as this method is 
 
 Four metrics were used to compare model performance. For endmember extraction the mean spectral angle and mean RMSE between true endmembers $\rho_i$ and extracted endmembers $\hat{\rho}_i$ were computed where the spectral angle for the $i$-th endmember is defined as 
 \begin{equation}
-    \theta(\rho_i, \hat{\rho}_i) =  \arcos\left( \dfrac{\langle \rho_i, \hat{\rho}_i \rangle}{\lVert \rho_i \rVert \cdot \lVert \hat{\rho}_i \rVert}\right)
+    \theta(\rho_i, \hat{\rho}_i) =  \arccos\left( \dfrac{\langle \rho_i, \hat{\rho}_i \rangle}{\lVert \rho_i \rVert \cdot \lVert \hat{\rho}_i \rVert}\right)
 \end{equation}
 and the RMSE for the $i$-th endmember is
 \begin{equation}
